--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,10 @@
 	"dockerFile": "../Dockerfile",
 	"extensions": [
 		"13xforever.language-x86-64-assembly",
-		"webfreak.debug"
+		"webfreak.debug",
+		"maziac.asm-code-lens",
+		"maziac.hex-hover-converter",
+		"emeraldwalk.RunOnSave"
 	],
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
